@@ -1,5 +1,7 @@
 CHANGES IN VERSION 1.3.2
 ------------------------
+ o update cnetplot corresponding to igraph version 0.6 <2012-07-11, Wed>
+ o parameter showCategory now support term ID vector <2012-07-11, Wed>
  o import termSim and combineScores from GOSemSim. <2012-06,14, Thu>
  o optimize setReadable <2012-05-09, Wed>
  o bug fixed of setReadable method. For those unmapped genes, return the original gene ID. <2012-05-15, Tue>
